# modoo

./: .gitignore  pyproject.toml
modoo/: adddocmeta.py  checkwd.py  cli.py  convid.py  fixid.py  getdocmeta.py  idform.py  idfuncs.py  mapid.py  mergeza.py  validate.py  zafuncs.py
